# build-lambda-py

./: .gitignore  README.md  build-lambda-py.js  index.js  package-lock.json  package.json
example/: .env.example  README.md  handler.py  package-lock.json  package.json  pyproject.toml
example/parent/: .env.example  pyproject.toml
example/src/: index.py
