[tool.poetry]
name = "src"
version = "0.1.1"
description = "generates presigned AWS S3 URLs for file get/post"
authors = ["loganpowell <loganp@tepper.cmu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
requests = "^2.31.0"
urllib3 = "1.26"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.28.35"
botocore = "^1.31.35"
python-dotenv = "^1.0.0"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
